# p2d-duck

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
.github/workflows/: publish.yml
duck_ai/: __init__.py  __main__.py  _challenge.py  _durable.py  client.py  exceptions.py  models.py
examples/: async_example.py  conversation.py  image_generation.py  image_upload.py  quickstart.py  streaming.py
p2d_duck/: __init__.py  __main__.py  _async_client.py  _challenge.py  _client.py  _durable.py  _exceptions.py  _models.py  _stubs.js
tests/: test_models.py  test_retry.py
