[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "p2d-duck"
version = "1.0.3"
description = "Free Python client for DuckDuckGo AI Chat (duck.ai). Sync, streaming, image generation, multimodal. Auto-retry on challenge failures. No API key required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "duck-ai contributors" },
]
keywords = [
    "duckduckgo", "duck.ai", "duckchat", "chatgpt", "claude", "llama",
    "mistral", "llm", "ai", "chatbot", "image-generation", "multimodal",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "mini-racer>=0.12",
    "cryptography>=41",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/pooraddyy/duck-ai-client"
Repository = "https://github.com/pooraddyy/duck-ai-client"
Issues = "https://github.com/pooraddyy/duck-ai-client/issues"

[project.scripts]
p2d-duck = "duck_ai.__main__:main"
duck-ai = "duck_ai.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["duck_ai"]

[tool.hatch.build.targets.wheel.force-include]
"duck_ai/_stubs.js" = "duck_ai/_stubs.js"

[tool.hatch.build.targets.sdist]
include = [
    "duck_ai",
    "README.md",
    "LICENSE",
    "examples",
    "tests",
    "pyproject.toml",
]
